<resources>
    <string name="app_name">Lab02</string>
    <string name="titulo">Pedite la cena!!!</string>
    <string name="lableHorario">Seleccione el horario</string>
    <string name="lableBotonToggleON">DELIVERY</string>
    <string name="lableBotonToggleOFF">RESERVAR MESA</string>
    <string name="lableNotificar">Notificar Reserva 1 hora antes</string>
    <string name="opcion1">Plato</string>
    <string name="opcion2">Postre</string>
    <string name="opcion3">Bebida</string>
    <string name="lableBontonAgregar">AGREGAR</string>
    <string name="lableBotonReiniciar">REINICIAR</string>
    <string name="lableBontonConfirmar">CONFIRMAR PEDIDO</string>
    <string name="agregarVacio">Debes seleccionar algo</string>
    <string name="yaConfirmado">Ya se ha confirmado el pedido</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo Electronico</string>
    <string name="codigo_tarjeta">Código de Seguridad</string>
    <string name="numero_tarjeta">Nro Tajerta</string>
    <string name="fecha">Fecha Vencimiento</string>
    <string name="lableBotonConfirmarPAgo">Confirmar Pago</string>
    <string name="lableBontonCancelar">Cancelar</string>
    <string name="campos_requeridos">Debe Completar Todos los Campos</string>
    <string name="mensajeConfirmado">El pedido a sido confirmado con un precio de: $ %1$.2f </string>
    <string name="mensajeCancelado">El pedido a sido cancelado</string>
    <string name="plato_ya_agregado">Ya cuenta con un plato en su pedido</string>
    <string name="bebida_ya_agregado">Ya cuenta con una bebida en su pedido</string>
    <string name="postre_ya_agregado">Ya cuenta con un postre en su pedido</string>
    <string name="pedido_vacio">No puede confirmar un pedido vacio</string>
</resources>
