<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="vertical"
    android:weightSum="3">

    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textStyle="bold"
        android:textSize="20sp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:textOff="@string/lableBotonToggleOFF"
        android:textOn="@string/lableBotonToggleON" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lableHorario"
        android:id="@+id/textView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerHora" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lableNotificar"
        android:id="@+id/switch1"
        android:paddingEnd="30dp" />

    <TextView
        android:id="@+id/textoPedido"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:visibility="visible"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radioPlato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radioPostre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion2"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radioBebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion3"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:orientation="horizontal"
        android:weightSum="3">


        <Button
            android:id="@+id/botonAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lableBontonAgregar"
            android:layout_weight="1" />

        <Button
            android:id="@+id/botonConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lableBontonConfirmar"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/botonReiniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lableBotonReiniciar"
            android:layout_weight="1"   />
    </LinearLayout>

    <ListView
        android:id="@+id/listaItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>